--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
-telegram.bot.token=6350292228:AAEiUDkn-xDZ1dnG51qUIcAUGNt5FCt2yyo
+#telegram.bot.token=6204165945:AAGTfDssSfu53eqs_8b88oIzv6Ftd0dcVNM
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=123456789
+spring.jpa.hibernate.ddl-auto=validate
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
